<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group >
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/home"
      android:title="@string/menu_home" />
    <item
      android:id="@+id/nav_Incidents"
      android:icon="@drawable/list"
      android:title="@string/menu_incident" />
    <item
      android:id="@+id/nav_map"
      android:icon="@drawable/map"
      android:title="@string/menu_map"/>
  </group>

  <group>
    <item
      android:id="@+id/nav_config"
      android:icon="@drawable/settings"
      android:title="@string/menu_settings" />
    <item
      android:id="@+id/nav_share"
      android:icon="@drawable/share"
      android:title="@string/menu_share"/>
    <item
      android:id="@+id/nav_info"
      android:icon="@drawable/info"
      android:title="@string/menu_info"/>
    <item
      android:id="@+id/nav_logout"
      android:icon="@drawable/logout"
      android:title="@string/menu_logout"/>
  </group>
</menu>
