<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Incidents"
        android:name="com.example.myapplication.ui.incidents.IncidentsFragment"
        android:label="@string/menu_incident"
        tools:layout="@layout/fragment_incidents" />

    <fragment
      android:id="@+id/nav_checkIncident"
      android:name="com.example.myapplication.ui.checkincidentfragment.CheckIncidentFragment"
      android:label="@string/menu_checkIncident"
      tools:layout="@layout/fragment_checkincidents"/>
  <fragment
    android:id="@+id/nav_config"
    android:name="com.example.myapplication.ui.config.ConfigFragment"
    android:label="@string/menu_config"
    tools:layout="@layout/fragment_config" />

</navigation>
