<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primaryContainer"
  android:padding="16dp">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/textGeneralSection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="@string/general"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/darkModeContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintTop_toBottomOf="@id/textGeneralSection"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <TextView
        android:id="@+id/textDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <Switch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/languageContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintTop_toBottomOf="@id/darkModeContainer"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/languages_array"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/notificationsContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintTop_toBottomOf="@id/languageContainer"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <Switch
        android:id="@+id/switchNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
      android:id="@+id/textAccountSection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/acount"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/notificationsContainer" />

    <Button
      android:id="@+id/btnChangeEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/change_email"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@id/textAccountSection"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp" />

    <Button
      android:id="@+id/btnChangePassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/change_password"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@id/btnChangeEmail"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp" />

    <Button
      android:id="@+id/btnChangeAvatar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/change_avatar"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@id/btnChangePassword"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp" />

    <Button
      android:id="@+id/btnDeleteAccount"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/delete_account"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@id/btnChangeAvatar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp" />


    <TextView
      android:id="@+id/textSessionSection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/sesion"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnDeleteAccount" />

    <Button
      android:id="@+id/btnLogout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/logout"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@id/textSessionSection"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
