<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  tools:context=".Login"
  >

  <EditText
    android:id="@+id/emailLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:ems="10"
    android:hint="@string/email"
    android:backgroundTint="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_editor_absoluteY="154dp"
    />

  <EditText
    android:id="@+id/passwordLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:ems="10"
    android:hint="@string/passwd"
    android:inputType="textPassword"
    android:backgroundTint="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

  <Button
    android:id="@+id/buttonLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:text="@string/login"
    android:textColor="@color/onPrimary"
    android:backgroundTint="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
    app:cornerRadius="16dp"/>

  <Button
    android:id="@+id/buttonCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:text="@string/create_account"
    android:backgroundTint="@color/colorSecondary"
    android:textColor="@color/onSecondary"
    app:cornerRadius="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
    />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:orientation="horizontal"
    android:padding="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount">

    <ImageButton
      android:id="@+id/buttonFacebook"
      android:layout_width="51dp"
      android:layout_height="51dp"
      android:layout_margin="8dp"
      android:layout_weight="1"
      android:background="@drawable/button_social"
      android:scaleType="center"
      app:srcCompat="@drawable/icons8_facebook" />

    <ImageButton
      android:id="@+id/buttonGoogle"
      android:layout_width="51dp"
      android:layout_height="51dp"
      android:layout_margin="8dp"
      android:layout_weight="1"
      android:background="@drawable/button_social"
      app:srcCompat="@drawable/icons8_google" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
